--- a/Blog.html
+++ b/Blog.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <div id="cabecera">
+        <img id="logo" src="images/icon.png"  alt="x"/>
+        BLOG
+    </div>
     <h1>Titulo del Blog</h1>
     <p>Parrafo del blog</p>
     <p>Cambiando Historias</p>
