--- a/Blog.html
+++ b/Blog.html
@@ -9,7 +9,7 @@
 <body>
     <div id="cabecera">
         <img id="logo" src="images/icon.png"  alt="x"/>
-        BLOG
+        BLOG 2.0 renovado
     </div>
     <h1>Titulo del Blog</h1>
     <p>És un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". </p>
