--- a/Blog.html
+++ b/Blog.html
@@ -11,7 +11,7 @@
         <img id="logo" src="images/icon.png"  alt="x"/>
         BLOG 2.0 renovado
     </div>
-    <h1>Titulo del Blog Renovado</h1>
+    <h1>Titulo del Blog Renovado 2.0</h1>
     <p>És un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". </p>
     <p>Cambiando Historias de la Vida</p>
     <p>la Vida la Vida la Vida</p>
